--- a/src/shared/components/common/Input/Input.module.scss
+++ b/src/shared/components/common/Input/Input.module.scss
@@ -30,6 +30,7 @@
     -moz-appearance: none;
   
     transition: border 0.15s ease-in-out;
+    font-family: var(--font-roboto), sans-serif;
   }
   
   .withSlot {
