--- a/src/shared/pages/CatalogPage/components/ProductsList/ProductsList.module.scss
+++ b/src/shared/pages/CatalogPage/components/ProductsList/ProductsList.module.scss
@@ -47,22 +47,23 @@
     position: relative;
     contain: layout;
 
-    @include mixins.respond('md'){  
+    @include mixins.respond('md') {
         justify-content: space-around;
     }
 }
 
+.cardWrapper {
+    position: relative;
+}
+
 .pageAnchor {
-    height: 1px;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    grid-column: 1 / -1;
+    height: 1px;
     opacity: 0;
     pointer-events: none;
-    margin: 0;
-    padding: 0;
-    min-height: 1px;
-    max-height: 1px;
-    content-visibility: hidden;
 }
 
 .loader {
@@ -73,7 +74,3 @@
     flex-shrink: 0;
     contain: strict;
 }
-
-.pageWrapper {
-    display: contents;
-  }
